<resources>
    <string name="app_name">Quran Player</string>
    <string name="language_label">Language</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="french">français</string>
    <string name="russian">русский</string>
    <string name="german">Deutsche</string>
    <string name="spanish">Español</string>
    <string name="turkish">Türk</string>
    <string name="chinese">中文</string>
    <string name="thai">ไทย</string>
    <string name="urdu">اردو</string>
    <string name="bengali">বাঙালি</string>
    <string name="bosnian">bosanski</string>
    <string name="portuguese">Português</string>

    <string name="next">Next</string>
    <string name="indonesian">bahasa Indonesia</string>
    <string name="favorite">Favorite</string>
    <string name="offline">Offline</string>
    <string name="download_successful">Downloaded Successfully</string>
    <string name="download_failed">Already Downloaded</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="adKey">ca-app-pub-3940256099942544/6300978111</string>
    <string name="no_internet_message">Please Check Your Internet Connection</string>
    <string name="settings">Settings</string>
    <string name="done">Done</string>
    <string name="restart_for_changes_message">Please Restart the app to see changes</string>
    <string name="no_items">No Items</string>
    <string name="download_started">Download Started</string>
    <string name="toolbar_title_transition">tool_bar_title_transition</string>
    <string name="toolbar_subtitle_transition">toolbar_subtitle_transition</string>
    <string name="no_items_cd">No Items Indicator</string>
    <string name="next_cd">Next</string>
    <string name="advertisement_cd">Advertisement</string>
    <string name="play_cd">Play button</string>
    <string name="fast_forward_cd">Fast Forward</string>
    <string name="rewind_cd">Rewind</string>
    <string name="media_progress_indicator_cd">Media Progress Indicator</string>
    <string name="play_time_cd">Current Play Time</string>
    <string name="duration_cd">Total Duration</string>
    <string name="add_to_favorite_cd">Add to favorite</string>
    <string name="download_cd">Download</string>
    <string name="no_internet_connection_cd">No Internet Connection</string>
    <string name="done_cd">Done</string>
    <string name="language_cd">Language</string>
    <string name="favorite_cd">Favorite</string>
    <string name="offline_cd">Offline</string>
    <string name="settings_cd">Settings</string>
</resources>
