<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/favorite"
        android:id="@+id/item_favorite"
        android:contentDescription="@string/favorite_cd"
        app:showAsAction="never"/>
    <item android:title="@string/offline"
        android:id="@+id/item_offline"
        android:contentDescription="@string/offline_cd"
        app:showAsAction="never"/>
    <item android:title="@string/settings"
        android:contentDescription="@string/settings_cd"
        android:id="@+id/item_settings"
        app:showAsAction="never"/>
    <item android:title="@string/privacy_policy"
        android:contentDescription="@string/privacy_policy"
        android:id="@+id/item_privacy_policy"
        app:showAsAction="never" />
</menu>